add: adapting flow with ActorRef